<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:gravity="center_horizontal"
    android:padding="60dp"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_your_LABEL1"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"

         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/textAgeBG"
        android:padding="10dp"
        android:text="@string/age"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/buttonDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_your_age"
        android:textColor="@color/textBlue"
        android:backgroundTint="@color/buttonBGColor"
        />

    <TextView
        android:id="@+id/textViewSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dateDisplay"
        android:textColor="@color/textBlue"
        android:textSize="25sp"

        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDate"
        android:textColor="@color/descriptionSmall"
        android:textSize="20sp"
        android:textStyle="italic"

        />
    <TextView
        android:id="@+id/minutesPassedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/minutesCalculated"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutesTillDate"
        android:textColor="@color/descriptionSmall"
        android:textSize="20sp"
        android:textStyle="italic"

        />
</LinearLayout>